2015-05-28  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18422]
	* Makefile ($(objpfx)tst-audit2): Depend on $(libdl).
	($(objpfx)tst-audit2.out): Also depend on
	$(objpfx)tst-auditmod9b.so.
	* elf/tst-audit2.c: Include <dlfcn.h>.
	(calloc_called): New.
	(calloc): Allow to be called more than once.
	(do_test): dllopen/dlclose $ORIGIN/tst-auditmod9b.so.

2015-05-28  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/ieee754/dbl-64/s_fabs.c: (__fabs): Call __builtin_fabs.
	* sysdeps/ieee754/flt-32/s_fabsf.c: (__fabsf): Likewise.

2015-05-27  Marko Myllynen  <myllynen@redhat.com>

	* stdlib/monetary.h: Fix comment.

2015-05-26  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/unix/sysv/linux/tile/sysdep.h (INLINE_SYSCALL):
	Avoid using variables in #defines that might cause shadowing.
	(INTERNAL_VSYSCALL_CALL): Likewise.

2015-05-26  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/lll_timedlock_wait.c: New file.

	* nptl/lowlevellock.c (__lll_timedlock_wait): Moved ...
	* nptl/lll_timedlock_wait.c: ... to this new file.
	* nptl/Makefile (libpthread-routines): Add it.
	* nptl/lowlevellock.c (__lll_timedwait_tid): Moved ...
	* nptl/lll_timedwait_tid.c: ... to this new file.
	* nptl/Makefile (libpthread-routines): Add it.
	* sysdeps/sparc/sparc32/lll_timedlock_wait.c: New file.
	* sysdeps/sparc/sparc32/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i586/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i686/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i586/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i686/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/lll_timedwait_tid.c: New file.

2015-05-26  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
